src/objects/UST_Event_Host__c.object
<CustomObject>
    <description>Hosts that can be applied to appointments on an event registration record.</description>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Additional comments about the host that will appear in any generated itinerary.</description>
        <inlineHelpText>Additional comments about the host that will appear in any generated itinerary.</inlineHelpText>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of registrants currently assigned to this host.</description>
        <inlineHelpText>The number of registrants currently assigned to this host.</inlineHelpText>
        <label>Assigned</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <description>The building where the hosting will be happening.</description>
        <inlineHelpText>The building where the hosting will be happening.</inlineHelpText>
        <label>Building</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Buildings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact record in Salesforce for this host.</description>
        <inlineHelpText>The contact record in Salesforce for this host.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UST Event Hosts</relationshipLabel>
        <relationshipName>UST_Event_Hosts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Name of the hosting course (if it is a course).</description>
        <inlineHelpText>Name of the hosting course (if it is a course).</inlineHelpText>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>The department a faculty or staff host works.</description>
        <inlineHelpText>The department a faculty or staff host works.</inlineHelpText>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Instance__c</fullName>
        <description>Event Instance in which hosts can be applied</description>
        <inlineHelpText>Event Instance in which hosts can be applied</inlineHelpText>
        <label>UST Event Instance</label>
        <referenceTo>UST_Event_Instance__c</referenceTo>
        <relationshipLabel>UST Event Hosts</relationshipLabel>
        <relationshipName>UST_Event_Hosts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the host.</description>
        <inlineHelpText>First name of the host.</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Time__c</fullName>
        <formula>TEXT( 
IF((HOUR(Time__c) &gt; 12), 
HOUR(Time__c) - 12, 
IF(HOUR(Time__c) == 0, 12, HOUR(Time__c)) 
) 

) 
&amp; 
IF(!ISBLANK(HOUR(Time__c)),&apos;:&apos;,&apos;&apos;) 
&amp; 
IF(MINUTE(Time__c)&lt;10,&apos;0&apos;,&apos;&apos;) 
&amp; 
TEXT( 
MINUTE(Time__c) 
) 
&amp; 
IF(!ISBLANK(MINUTE(Time__c)),&apos; &apos;,&apos;&apos;) 
&amp; 
IF(!ISBLANK(HOUR(Time__c)), 
IF(HOUR(Time__c) &gt;= 12, &apos;PM&apos;, &apos;AM&apos;), &apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of the host (important for overnight hosting).</description>
        <inlineHelpText>Gender of the host (important for overnight hosting).</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the host</description>
        <inlineHelpText>Last name of the host</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Room and building number, address, where hosting will be happening.</description>
        <inlineHelpText>Room and building number, address, where hosting will be happening.</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Available__c</fullName>
        <description>The number of registrants this host can accommodate.</description>
        <inlineHelpText>The number of registrants this host can accommodate.</inlineHelpText>
        <label>Max Available</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Title__c</fullName>
        <description>The preferred title of the host (Professor, Dr., Burgermeister Meisterburger).</description>
        <inlineHelpText>The preferred title of the host (Professor, Dr., Burgermeister Meisterburger).</inlineHelpText>
        <label>Preferred Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining__c</fullName>
        <description>The remaining amount of spaces left in the max capacity of registrants a host can take.</description>
        <formula>Max_Available__c -  Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The remaining amount of spaces left in the max capacity of registrants a host can take.</inlineHelpText>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>The time of the hosting</description>
        <inlineHelpText>The time of the hosting</inlineHelpText>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Undergrad_Major__c</fullName>
        <description>The major the host is pursuing at St. Thomas.</description>
        <inlineHelpText>The major the host is pursuing at St. Thomas.</inlineHelpText>
        <label>Undergrad Major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Academic_Majors</valueSetName>
        </valueSet>
    </fields>
    <label>UST Event Host</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Max_Available__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hosts</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Max_Available__c</columns>
        <columns>Gender__c</columns>
        <columns>Undergrad_Major__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Location__c</columns>
        <columns>Department__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Hosts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hosts_Classes</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Max_Available__c</columns>
        <columns>Gender__c</columns>
        <columns>Undergrad_Major__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Location__c</columns>
        <columns>Department__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UST_Event_Host__c.Class</value>
        </filters>
        <label>All Hosts - Classes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hosts_Coaches</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Max_Available__c</columns>
        <columns>Gender__c</columns>
        <columns>Undergrad_Major__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Location__c</columns>
        <columns>Department__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UST_Event_Host__c.Coach</value>
        </filters>
        <label>All Hosts - Coaches</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hosts_Counselor</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Max_Available__c</columns>
        <columns>Gender__c</columns>
        <columns>Undergrad_Major__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Location__c</columns>
        <columns>Department__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UST_Event_Host__c.Counselor</value>
        </filters>
        <label>All Hosts - Counselor</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hosts_Faculty</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Max_Available__c</columns>
        <columns>Gender__c</columns>
        <columns>Undergrad_Major__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Location__c</columns>
        <columns>Department__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UST_Event_Host__c.Faculty</value>
        </filters>
        <label>All Hosts - Faculty</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hosts_Housing</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Max_Available__c</columns>
        <columns>Gender__c</columns>
        <columns>Undergrad_Major__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Location__c</columns>
        <columns>Department__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UST_Event_Host__c.Housing</value>
        </filters>
        <label>All Hosts - Housing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hosts_Today</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Max_Available__c</columns>
        <columns>Gender__c</columns>
        <columns>Undergrad_Major__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Location__c</columns>
        <columns>Department__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Hosts Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HOST-{0000}</displayFormat>
        <label>UST Event Host Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UST Event Hosts</pluralLabel>
    <recordTypes>
        <fullName>Class</fullName>
        <active>true</active>
        <description>Visit a class</description>
        <label>Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coach</fullName>
        <active>true</active>
        <description>Visit with a coach</description>
        <label>Coach</label>
    </recordTypes>
    <recordTypes>
        <fullName>Counselor</fullName>
        <active>true</active>
        <description>Admission Counselor Visit</description>
        <label>Counselor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Faculty</fullName>
        <active>true</active>
        <description>Visit with a faculty member</description>
        <label>Faculty</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing</fullName>
        <active>true</active>
        <description>A housing host (dorm room overnight)</description>
        <label>Housing</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>